[project]
name = "cmeel-urdfdom-headers"
version = "1.1.0"
description = "cmeel distribution for urdfdom-headers, headers for URDF parsers"
readme = "README.md"
requires-python = ">= 3.7"
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-urdfdom-headers"

[tool.cmeel]
source = "urdfdom_headers"
run-tests = false
build-number = 2

[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"
