[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for urdfdom-headers, headers for URDF parsers"
license = "BSD-3-Clause"
name = "cmeel-urdfdom-headers"
requires-python = ">= 3.7"
version = "1.1.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-urdfdom-headers"

[tool.cmeel]
any = true
build-number = 4
run-tests = false
source = "urdfdom_headers"

[tool.tomlsort]
all = true
